Updated GANce entry, Fixed filtering logic for invisible posts, Added slight blue tint to unvisited links, and slight purple tint to visible links.

--- a/devon_bray_portfolio/web_view/static/portfolio.css
+++ b/devon_bray_portfolio/web_view/static/portfolio.css
@@ -175,7 +175,7 @@ figcaption > h2 {
 
 a:link {
   font-weight: bold;
-  color: white;
+  color: #c9f2ff;
   filter: brightness(100%);
 }
 
@@ -184,5 +184,5 @@ a:hover {
 }
 
 a:visited {
-  color: white;
+  color: #fde0ff;
 }
